# CPDB-API

./: README.html  README.md  cpdb_testing.ipynb  drupal_export.yaml  pyproject.toml  request_schema.json  requirements.txt  setup.py
cpdb_api/: request.py  request_test.py
src/cpdb-api/: request.py
src/cpdb_api/: request.py
tests/: request_test.py
tests/backend/: backend_test.py
tests/quality/: quality_test.py
