[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpdb_api"
version = "1.0.1"
authors = [
  { name="Kevin Dackow", email="kjdackow@gmail.com" },
]
description = "An API to access the NewClimate Institute's Climate Policy Database"
dependencies = [
  "pandas",
  "requests"
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["nci", "cpdb", "climatepolicydatabase", "newclimateinstitute"]

[project.urls]
"Homepage" = "https://github.com/KevinDackow/CDPB-API"

